[gd_scene load_steps=3 format=3 uid="uid://b2e5dhytgcybs"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_main_menu"]
[ext_resource type="Script" path="res://volume_slider.gd" id="2_volume_slider"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_main_menu")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.2, 1)

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -200.0
offset_right = 150.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="MainContainer"]
layout_mode = 2
text = "TWENTY SECOND SLAM"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer1" type="Control" parent="MainContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="MenuButtons" type="VBoxContainer" parent="MainContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="StartButton" type="Button" parent="MainContainer/MenuButtons"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "START GAME"

[node name="LeaderboardsButton" type="Button" parent="MainContainer/MenuButtons"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "LEADERBOARDS"

[node name="SettingsButton" type="Button" parent="MainContainer/MenuButtons"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "SETTINGS"

[node name="ExitButton" type="Button" parent="MainContainer/MenuButtons"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "EXIT"

[node name="Spacer2" type="Control" parent="MainContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="VersionLabel" type="Label" parent="MainContainer"]
layout_mode = 2
text = "v0.0.1"
horizontal_alignment = 1

[node name="UI" type="CanvasLayer" parent="."]

[node name="SettingsPanel" type="Panel" parent="UI"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0

[node name="SettingsContainer" type="VBoxContainer" parent="UI/SettingsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="SettingsTitle" type="Label" parent="UI/SettingsPanel/SettingsContainer"]
layout_mode = 2
text = "SETTINGS"
horizontal_alignment = 1

[node name="Spacer3" type="Control" parent="UI/SettingsPanel/SettingsContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="VolumeContainer" type="HBoxContainer" parent="UI/SettingsPanel/SettingsContainer"]
layout_mode = 2

[node name="VolumeLabel" type="Label" parent="UI/SettingsPanel/SettingsContainer/VolumeContainer"]
layout_mode = 2
text = "Volume:"

[node name="VolumeSlider" type="HSlider" parent="UI/SettingsPanel/SettingsContainer/VolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
value = 100.0
script = ExtResource("2_volume_slider")

[node name="FullscreenCheckbox" type="CheckBox" parent="UI/SettingsPanel/SettingsContainer"]
layout_mode = 2
text = "Fullscreen"

[node name="Spacer4" type="Control" parent="UI/SettingsPanel/SettingsContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="BackButton" type="Button" parent="UI/SettingsPanel/SettingsContainer"]
layout_mode = 2
text = "BACK"

[connection signal="pressed" from="MainContainer/MenuButtons/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MainContainer/MenuButtons/LeaderboardsButton" to="." method="_on_leaderboards_button_pressed"]
[connection signal="pressed" from="MainContainer/MenuButtons/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="MainContainer/MenuButtons/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="value_changed" from="UI/SettingsPanel/SettingsContainer/VolumeContainer/VolumeSlider" to="." method="_on_volume_slider_value_changed"]
[connection signal="toggled" from="UI/SettingsPanel/SettingsContainer/FullscreenCheckbox" to="." method="_on_fullscreen_checkbox_toggled"]
[connection signal="pressed" from="UI/SettingsPanel/SettingsContainer/BackButton" to="." method="_on_back_button_pressed"]
